--- a/cloak.html
+++ b/cloak.html
@@ -1,16 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Loading…</title>
+  <meta charset="UTF-8" />
+  <title>Garlston – Page Cloaker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;400;600&family=Lilita+One&display=swap" rel="stylesheet">
+
+  <style>
+    :root {
+      --blue: #4c73f2;
+      --purple: #9c23da;
+      --pink: #ee209d;
+      --bg: #0b0d13;
+      --panel: #121524;
+      --border: #1f2340;
+      --text: #eef0ff;
+      --muted: #9aa3d9;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-family: "Chivo", system-ui, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background:
+        radial-gradient(circle at top left, rgba(156,35,218,0.15), transparent 40%),
+        radial-gradient(circle at bottom right, rgba(238,32,157,0.15), transparent 40%),
+        var(--bg);
+      color: var(--text);
+    }
+
+    .app {
+      max-width: 820px;
+      margin: 40px auto;
+      padding: 24px;
+      background: linear-gradient(180deg, #14182d, #0f1222);
+      border-radius: 18px;
+      border: 1px solid var(--border);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.6);
+    }
+
+    h1 {
+      font-family: "Lilita One", cursive;
+      margin: 0 0 20px;
+      font-size: 1.9rem;
+      background: linear-gradient(90deg, var(--blue), var(--purple), var(--pink));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    label {
+      font-size: 0.85rem;
+      color: var(--muted);
+      display: block;
+      margin-top: 14px;
+    }
+
+    input, select, button {
+      width: 100%;
+      margin-top: 6px;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+      background: #0a0d1c;
+      color: var(--text);
+      font-size: 0.9rem;
+    }
+
+    button {
+      cursor: pointer;
+      margin-top: 18px;
+    }
+
+    button.primary {
+      background: linear-gradient(135deg, var(--blue), var(--purple), var(--pink));
+      border: none;
+      font-weight: 600;
+    }
+
+    button:hover {
+      filter: brightness(1.1);
+    }
+
+    .footer {
+      margin-top: 14px;
+      font-size: 0.75rem;
+      color: var(--muted);
+      text-align: right;
+    }
+  </style>
 </head>
-<body style="margin:0">
+<body>
 
-  <iframe id="frame" style="border:none;width:100vw;height:100vh;"></iframe>
+<script>
+  const isCloak = location.hash === "#cloak";
 
-  <script>
-    const title = localStorage.getItem("cloak_title");
-    const icon = localStorage.getItem("cloak_icon");
-    const url = localStorage.getItem("cloak_url");
+  /* =======================
+     CLOAK MODE (NEW TAB)
+     ======================= */
+  if (isCloak) {
+    const title = localStorage.getItem("garlston_title");
+    const icon = localStorage.getItem("garlston_icon");
+    const url = localStorage.getItem("garlston_url");
 
     if (title) document.title = title;
 
@@ -21,9 +119,86 @@
       document.head.appendChild(link);
     }
 
+    // Mask history
+    history.replaceState({}, "", "/");
+
+    // Panic key
+    document.addEventListener("keydown", e => {
+      if (e.key === "Escape") {
+        window.location.replace("https://docs.google.com");
+      }
+    });
+
+    // Redirect (NO iframe — this is the fix)
     if (url) {
-      document.getElementById("frame").src = url;
+      setTimeout(() => {
+        window.location.replace(url);
+      }, 80);
     }
-  </script>
+
+  /* =======================
+     TOOL UI MODE (EMBED)
+     ======================= */
+  } else {
+    document.body.innerHTML = `
+      <div class="app">
+        <h1>Page Cloaker</h1>
+
+        <label>Preset</label>
+        <select id="preset">
+          <option value="">Custom</option>
+          <option value="docs">Google Docs</option>
+          <option value="classroom">Google Classroom</option>
+          <option value="drive">Google Drive</option>
+        </select>
+
+        <label>Fake Tab Title</label>
+        <input id="title" value="Google Docs">
+
+        <label>Favicon URL</label>
+        <input id="icon" value="https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico">
+
+        <label>Target URL</label>
+        <input id="url" placeholder="https://">
+
+        <button class="primary" onclick="openCloak()">Open Cloaked Page</button>
+
+        <div class="footer">Garlston • Page Appearance Tool</div>
+      </div>
+    `;
+
+    const presets = {
+      docs: {
+        title: "Google Docs",
+        icon: "https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico"
+      },
+      classroom: {
+        title: "Google Classroom",
+        icon: "https://ssl.gstatic.com/classroom/favicon.png"
+      },
+      drive: {
+        title: "Google Drive",
+        icon: "https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_48dp.png"
+      }
+    };
+
+    document.getElementById("preset").addEventListener("change", e => {
+      const p = presets[e.target.value];
+      if (!p) return;
+      title.value = p.title;
+      icon.value = p.icon;
+    });
+
+    window.openCloak = function () {
+      localStorage.setItem("garlston_title", title.value);
+      localStorage.setItem("garlston_icon", icon.value);
+      localStorage.setItem("garlston_url", url.value);
+
+      const base = location.href.split("#")[0];
+      window.open(base + "#cloak", "_blank");
+    };
+  }
+</script>
+
 </body>
 </html>
